--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -320,6 +320,7 @@
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../js/header.js"></script>
+    <script src="../../js/slang.js"></script>
 </body>
 
 
