--- a/view/community/mainCommunity.html
+++ b/view/community/mainCommunity.html
@@ -88,6 +88,30 @@
             color: #fff;
         } */
         
+        .carousel-caption .btn {
+            opacity: 0.6;
+            color: rgb(255,255,255);
+            margin-left: 0px;
+            width: 135px;
+            height: 55px;
+            border-width: 2px;
+            background-color: rgba(211, 174, 164, 0.452);
+            border-color: rgb(244,116,76);
+            text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);
+        }
+
+        .carousel-caption .btn:hover {
+            opacity: 1;
+            transform:scale(1.02);
+            color: rgb(255,255,255);
+            margin-left: 0px;
+            width: 135px;
+            height: 55px;
+            border-width: 2px;
+            background-color: rgba(235, 155, 137, 0.363);
+            border-color: rgb(245, 98, 53);
+            text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);
+        }
         
     </style>
 </head>
@@ -98,53 +122,56 @@
     <div class="container" style="height: 600px;width: 1200px;margin-top: 50px;">
         <div class="row">
             <div class="col-md-8">
+
+                <!-- 왼쪽 캐러셀 -->
                 <div class="carousel slide" data-ride="carousel" id="carousel-1" style="border-radius: 0px;width: 100%;">
                     <div class="carousel-inner" style="border-radius: 20px;">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="../../assets/img/4365436.jpg"
-                                alt="Slide Image" style="height: 500px;">
+
+                        <div class="carousel-item active"><img id="carousel_rank1_img" class="w-100 d-block" src="../../assets/img/KakaoTalk_20210506_154158464.jpg" 
+                            alt="Slide Image" style="height: 500px;object-fit: cover;">
+                        <div class="carousel-caption"
+                            style="font-family: 'Noto Sans KR', sans-serif;margin-bottom: 0px;text-align: left;height: 450px; padding-top: 5px;">
+                            <p style="font-size: 18px; margin-bottom: 7px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);">인기 인테리어 1위</p>
+                            <h1 style="font-size: 36px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);">
+                                <strong id="carousel_rank1_title"><!-- 제목 --></strong></h1>
+                            <p style="font-size: 18px;margin-right: 148px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);"><span id="carousel_rank1_nickname"><!-- 닉네임 --></span> 님의 인테리어 사진</p>
+                        </div>
+                        <div class="carousel-caption"
+                            style="font-family: 'Noto Sans KR', sans-serif;text-align: right;padding-left: 0px;padding-right: 0px;margin-left: 0px;width: 568px;">
+                            <button id="carousel_rank1_btn" class="btn btn-lg" type="button">보러가기</button>
+                        </div>
+                    </div>
+
+                        <div class="carousel-item"><img id="carousel_rank2_img" class="w-100 d-block" src="../../assets/img/KakaoTalk_20210506_154158464.jpg" 
+                                alt="Slide Image" style="height: 500px;object-fit: cover;">
                             <div class="carousel-caption"
-                                style="font-family: 'Noto Sans KR', sans-serif;margin-bottom: 340px;margin-left: -190px;">
-                                <h1 style="font-size: 36px;margin-bottom: 11px;margin-left: 0px;margin-right: 0px;">
-                                    <strong>원룸 오피스텔 셀프인테리어</strong></h1>
-                                <p style="font-size: 18px;margin-top: 0px;margin-bottom: 0;margin-right: 148px;">강남 xx오피스텔
-                                    장현성(26)씨 사진</p>
+                                style="font-family: 'Noto Sans KR', sans-serif;margin-bottom: 0px;text-align: left;height: 450px; padding-top: 5px;">
+                                <p style="font-size: 18px; margin-bottom: 7px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);">인기 인테리어 2위</p>
+                                <h1 style="font-size: 36px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);">
+                                    <strong id="carousel_rank2_title"><!-- 제목 --></strong></h1>
+                                <p style="font-size: 18px;margin-right: 148px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);"><span id="carousel_rank2_nickname"><!-- 닉네임 --></span> 님의 인테리어 사진</p>
                             </div>
                             <div class="carousel-caption"
                                 style="font-family: 'Noto Sans KR', sans-serif;text-align: right;padding-left: 0px;padding-right: 0px;margin-left: 0px;width: 568px;">
-                                <button class="btn btn-lg" type="button"
-                                    style="color: rgb(255,255,255);margin-left: 0px;width: 135px;height: 55px;border-width: 3px;border-color: rgb(244,116,76);">보러가기</button>
+                                <button id="carousel_rank2_btn" class="btn btn-lg" type="button">보러가기</button>
                             </div>
                         </div>
-                        <div class="carousel-item"><img class="w-100 d-block"
-                                src="../../assets/img/KakaoTalk_20210506_154158464.jpg" alt="Slide Image" style="height: 500px;">
-                            <div class="carousel-caption"
-                                style="font-family: 'Noto Sans KR', sans-serif;margin-bottom: 340px;margin-left: -190px;">
-                                <h1 style="font-size: 36px;margin-bottom: 11px;margin-left: 0px;margin-right: 0px;">
-                                    <strong>원룸 오피스텔 셀프인테리어</strong></h1>
-                                <p style="font-size: 18px;margin-top: 0px;margin-bottom: 0;margin-right: 148px;">강남 xx오피스텔
-                                    장현성(26)씨 사진</p>
-                            </div>
-                            <div class="carousel-caption"
-                                style="font-family: 'Noto Sans KR', sans-serif;text-align: right;padding-left: 0px;padding-right: 0px;margin-left: 0px;width: 568px;">
-                                <button class="btn btn-lg" type="button"
-                                    style="color: rgb(255,255,255);margin-left: 0px;width: 135px;height: 55px;border-width: 3px;border-color: rgb(244,116,76);">보러가기</button>
-                            </div>
+                        
+                        <div class="carousel-item"><img id="carousel_rank3_img" class="w-100 d-block" src="../../assets/img/KakaoTalk_20210506_154158464.jpg" 
+                            alt="Slide Image" style="height: 500px;object-fit: cover;">
+                        <div class="carousel-caption"
+                            style="font-family: 'Noto Sans KR', sans-serif;margin-bottom: 0px;text-align: left; height: 450px; padding-top: 5px;">
+                            <p style="font-size: 18px; margin-bottom: 7px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);">인기 인테리어 3위</p>
+                            <h1 style="font-size: 36px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);">
+                                <strong id="carousel_rank3_title"><!-- 제목 --></strong></h1>
+                            <p style="font-size: 18px;margin-right: 148px;text-shadow: 1px 2px 2px rgba(88, 88, 88, 0.445);"><span id="carousel_rank3_nickname"><!-- 닉네임 --></span> 님의 인테리어 사진</p>
                         </div>
-                        <div class="carousel-item"><img class="w-100 d-block"
-                                src="../../assets/img/KakaoTalk_20210506_154158314.jpg" alt="Slide Image" style="height: 500px;">
-                            <div class="carousel-caption"
-                                style="font-family: 'Noto Sans KR', sans-serif;margin-bottom: 340px;margin-left: -190px;">
-                                <h1 style="font-size: 36px;margin-bottom: 11px;margin-left: 0px;margin-right: 0px;">
-                                    <strong>원룸 오피스텔 셀프인테리어</strong></h1>
-                                <p style="font-size: 18px;margin-top: 0px;margin-bottom: 0;margin-right: 148px;">강남 xx오피스텔
-                                    장현성(26)씨 사진</p>
-                            </div>
-                            <div class="carousel-caption"
-                                style="font-family: 'Noto Sans KR', sans-serif;text-align: right;padding-left: 0px;padding-right: 0px;margin-left: 0px;width: 568px;">
-                                <button class="btn btn-lg" type="button"
-                                    style="color: rgb(255,255,255);margin-left: 0px;width: 135px;height: 55px;border-width: 3px;border-color: rgb(244,116,76);">보러가기</button>
-                            </div>
+                        <div class="carousel-caption"
+                            style="font-family: 'Noto Sans KR', sans-serif;text-align: right;padding-left: 0px;padding-right: 0px;margin-left: 0px;width: 568px;">
+                            <button id="carousel_rank3_btn" class="btn btn-lg" type="button">보러가기</button>
                         </div>
+                    </div>
+
                     </div>
                     <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"
                             style="width: 70px;"><span class="carousel-control-prev-icon"></span><span
@@ -158,16 +185,22 @@
                     </ol>
                 </div>
             </div>
+
+            <!-- 오른쪽 캐러셀 -->
             <div class="col-md-4">
                 <div class="carousel slide" data-ride="carousel" id="carousel-2">
                     <div class="carousel-inner" style="border-radius: 20px;">
+
                         <div class="carousel-item active"><img class="w-100 d-block"
                                 src="../../assets/img/978a6658c39f5857b77d5af8f27e13d3.jpg" alt="Slide Image"
-                                style="height: 500px;"></div>
+                                style="height: 500px;object-fit: cover;"></div>
+
                         <div class="carousel-item"><img class="w-100 d-block" src="../../assets/img/222.jpg" alt="Slide Image"
-                                style="height: 500px;"></div>
+                                style="height: 500px;object-fit: cover;"></div>
+
                         <div class="carousel-item"><img class="w-100 d-block" src="../../assets/img/333.jpg" alt="Slide Image"
-                                style="height: 500px;"></div>
+                                style="height: 500px;object-fit: cover;"></div>
+
                     </div>
                     <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span
                                 class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a
@@ -180,6 +213,8 @@
                     </ol>
                 </div>
             </div>
+
+
         </div>
     </div>
     <div class="container" style="width: 1200px;height: 340px;">
@@ -275,6 +310,7 @@
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../js/includeHTML.js"></script>
     <script src="../../js/header.js"></script>
+    <script src="../../js/slang.js"></script>
     
 </body>
 
@@ -402,6 +438,24 @@
                     $("#hotCardList").append(app);
                 } else {
                     $.each(list, function (i, val) {
+
+                        if(i == 0) {
+                            $('#carousel_rank1_title').text(val.cardTitle);
+                            $('#carousel_rank1_nickname').text(val.nickName);
+                            $('#carousel_rank1_img').attr('src', 'http://localhost:3000/upload/'+val.cardFileName);
+                            $('#carousel_rank1_btn').attr('onclick', 'location.href = "/view/community/storyDetail.html?seq='+val.cardSeq+'"');
+                        } else if(i == 1) {
+                            $('#carousel_rank2_title').text(val.cardTitle);
+                            $('#carousel_rank2_nickname').text(val.nickName);
+                            $('#carousel_rank2_img').attr('src', 'http://localhost:3000/upload/'+val.cardFileName);
+                            $('#carousel_rank2_btn').attr('onclick', 'location.href = "/view/community/storyDetail.html?seq='+val.cardSeq+'"');
+                        } else if(i == 2) {
+                            $('#carousel_rank3_title').text(val.cardTitle);
+                            $('#carousel_rank3_nickname').text(val.nickName);
+                            $('#carousel_rank3_img').attr('src', 'http://localhost:3000/upload/'+val.cardFileName);
+                            $('#carousel_rank3_btn').attr('onclick', 'location.href = "/view/community/storyDetail.html?seq='+val.cardSeq+'"');
+                        };
+
                         app += '<div style="width: 320px; margin-right: 50px;">'
                             +   '<article article class="project_wrap" >'
                             +    '<a href="./storyDetail.html?seq='+val.cardSeq+'"></a>'
