스토리 디테일 세부 리스트, 신고기능

--- a/view/admin/salesStatus.html
+++ b/view/admin/salesStatus.html
@@ -942,7 +942,7 @@ function lineGraph(){
             $("#jeju").html("<h2>제주광역시 주문건수 : "+mapDto.jeju+"건");               
          },
          error:function(){
-             alert("error");
+             alert("map List error");
          }
 
      })
