--- a/view/commons/footer.html
+++ b/view/commons/footer.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
-    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../../assets/css/styles.min.css">
+    <!-- <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css"> -->
+    <!-- <link rel="stylesheet" href="../../assets/css/styles.min.css"> -->
 </head>
 
 <body>
@@ -43,8 +43,8 @@
             <p class="copyright">Company WANZA © 2021</p>
         </div>
     </footer>
-    <script src="../../assets/js/jquery.min.js"></script>
-    <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script src="../../assets/js/jquery.min.js"></script> -->
+    <!-- <script src="../../assets/bootstrap/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
